--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Ana-Terdolino-desenvolvedora</title>
   <meta name="description" content="Desenvolvedora FrontEnd & Designer UX/UI.">
   <link rel="stylesheet" href="/css/style.mim.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
