mudança de texto

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <img class="perfil" src="./img/perfil.jpg" alt="perfil" width="233" height="391">
     <div>
       <h1>Olá! Sou Ana Terdolino</h1>
-      <p>Sou <strong>Ana Terdolino</strong>, desenvolvedora <strong>FrontEnd</strong> & <strong>Designer UX/UI</strong>. Formada em <strong>Design Gráfico</strong> e movida pelo meu interesse pela área de tecnologia, decidir me dedicar a área de <strong>UX/UI</strong> e <strong>programação</strong>, combinando meu conhecimentos do Design na criação de ótimas experiencias para os usuários.</p>
+      <p>Sou <strong>Ana Terdolino</strong>, desenvolvedora <strong>Front-End</strong> & <strong>Designer UX/UI</strong>. Formada em <strong>Design Gráfico</strong> e movida pelo meu interesse pela área de tecnologia, decidir me dedicar a área de <strong>UX/UI</strong> e <strong>programação</strong>, combinando meu conhecimentos do Design na criação de ótimas experiencias para os usuários.</p>
       <h3>Habilidades</h3>
       <img class="habilidades" src="./img/habilidades.svg" alt="habilidades">
     </div>
