--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description" content="Desenvolvedora FrontEnd & Designer UX/UI.">
   <link rel="stylesheet" href="/css/style.mim.css">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
