correção de texto

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <img class="perfil" src="./img/perfil.jpg" alt="perfil" width="233" height="391">
     <div>
       <h1>Olá! Sou Ana Terdolino</h1>
-      <p>Sou <strong>Ana Terdolino</strong>, desenvolvedora <strong>Front-End</strong> & <strong>Designer UX/UI</strong>. Formada em <strong>Design Gráfico</strong> e movida pelo meu interesse pela área de tecnologia, decidir me dedicar a área de <strong>UX/UI</strong> e <strong>programação</strong>, combinando meu conhecimentos do Design na criação de ótimas experiencias para os usuários.</p>
+      <p>Sou <strong>Ana Terdolino</strong>, desenvolvedora <strong>Front-End</strong> & <strong>Designer UX/UI</strong>. Formada em <strong>Design Gráfico</strong> e movida pelo meu interesse pela área de tecnologia, decidi me dedicar a área de <strong>UX/UI</strong> e <strong>programação</strong>, combinando os meus conhecimentos do Design na criação de ótimas experiencias para os usuários.</p>
       <h3>Habilidades</h3>
       <img class="habilidades" src="./img/habilidades.svg" alt="habilidades">
     </div>
@@ -90,7 +90,7 @@
     <div class="formacao-container">
       <h2 class="subtitulo">Formação</h2>
       <div>
-        <p class="formacao-texto"> Experiência acadêmica com o curso superior <strong>Design Gráfico</strong>, também fazer cursos livres na área de Edição de vídeo e Motion graphics. E mais recente estou fazendo cursos para aprofundar os conhecimentos de <strong>UX/UI Design</strong> e <strong>Front-end</strong>.
+        <p class="formacao-texto"> Experiência acadêmica com o curso superior <strong>Design Gráfico</strong>, também fiz cursos livres na área de Edição de vídeo e Motion graphics. E mais recentemente estou fazendo cursos para aprofundar meus conhecimentos de <strong>UX/UI Design</strong> e <strong>Front-end</strong>.
         </p>
         <ul class="faculdade-lista">
           <li class="faculdade">
